# Tailormade-Coloring-Book

./: .gitignore  BLAST_SYSTEM.md  GITHUB_SETUP.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_RESEARCH.md  PHASE_2_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  RUTHLESS_CODE_REVIEW.md  findings.md  gemini.md  progress.md  task_plan.md
architecture/: WORKFLOW_MAPPING.md  authentication.md  content_safety.md  firebase_db.md  image_generation.md  pdf_pipeline.md  rate_limiting.md  scene_planning.md  storage.md
backend/: .env.example  api.http  pyproject.toml
backend/app/: config.py  constants.py  main.py  tasks.py  worker.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: book.py  user.py
backend/app/routers/: auth.py  books.py  photos.py
backend/app/services/: content_filter.py  firebase_db.py  image_gen.py  pdf_builder.py  scene_planner.py  storage.py
backend/tests/: test_content_filter.py  test_scene_planner.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: books.ts  client.ts
frontend/src/composables/: useCanvas.ts  useGeneration.ts  useImagePipeline.ts
frontend/src/lib/: firebase.ts
frontend/src/router/: index.ts
frontend/src/store/: auth.ts  drawing.ts
frontend/src/types/: book.ts
frontend/src/views/: CreateView.vue  GalleryView.vue  HomeView.vue  StudioView.vue
tools/: README.md  health_check.py  verify_anthropic.py  verify_fal.py  verify_firebase.py  verify_r2.py
(+5 files in other folders)
